add webpack-runtime.js, clean up

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script>console.log('utility2 exists', 'utility2' in window);</script>
     <script src="dist/vendor-react.js"></script>
     <script src="dist/vendor-jquery.js"></script>
+    <script src="dist/webpack-runtime.js"></script>
     <script>console.log('jQuery exists', typeof jQuery === 'function');</script>
     <script src="dist/pageA.js"></script>
     <script src="dist/pageB.js"></script>
