--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <script src="dist/environment.js"></script>
     <script>console.log('Set exists', 'Set' in window);</script>
     <script>console.log('utility2 exists', 'utility2' in window);</script>
-    <script src="dist/vendor-react.js"></script>
-    <script src="dist/vendor-jquery.js"></script>
+    <script src="dist/vendor_react.js"></script>
+    <script src="dist/vendor_jquery.js"></script>
     <script src="dist/webpack-runtime.js"></script>
     <script>console.log('jQuery exists', typeof jQuery === 'function');</script>
     <script src="dist/pageA.js"></script>
